--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HIRO</title>
+    <title>PULSE</title>
     <style>
         body {
             margin: 0;
@@ -67,14 +67,16 @@
             font-size: 24px;
             margin: 10px 0;
         }
-        .content a {
-            display: inline-block;
+        .content button {
             font-size: 24px;
             color: #000000;
+            background: none;
+            border: none;
+            cursor: pointer;
             text-decoration: none;
             margin-top: 10px;
         }
-        .content a:hover {
+        .content button:hover {
             text-decoration: underline;
         }
         footer {
@@ -84,17 +86,116 @@
             font-size: 14px;
             color: #000000;
         }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 5px;
+            width: 90%;
+            max-width: 500px;
+            text-align: center;
+        }
+        .modal-content h2 {
+            font-size: 24px;
+            margin: 0 0 20px;
+        }
+        .modal-content input,
+        .modal-content textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        .modal-content textarea {
+            height: 100px;
+            resize: vertical;
+        }
+        .modal-content button[type="submit"] {
+            background-color: #000000;
+            color: #ffffff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .modal-content button[type="submit"]:hover {
+            background-color: #333333;
+        }
+        .modal-content .close {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+        .modal-content p {
+            font-size: 12px;
+            margin-top: 10px;
+        }
+        .modal-content a {
+            color: #000000;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="content">
-        <h1>HIRO</h1>
+        <h1>PULSE</h1>
         <p>Кадровое агентство массового найма.</p>
         <p>Россия и СНГ.</p>
-        <a href="mailto:contact@example.com">Связаться</a>
+        <button onclick="openModal()">Связаться</button>
     </div>
     <footer>
         2025 | ИП Гончаров Никита Дмитриевич
     </footer>
+
+    <!-- Modal Form -->
+    <div id="contactModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Свяжитесь с нами</h2>
+            <p>Задайте свой вопрос и укажите адрес электронной почты для связи</p>
+            <form>
+                <input type="text" placeholder="Как к вам обращаться" required>
+                <input type="email" placeholder="Email для обратной связи" required>
+                <textarea placeholder="Ваш вопрос и тема обращения" required></textarea>
+                <button type="submit">Отправить</button>
+                <p>Отправляя форму, вы даете согласие на обработку персональных данных и соглашаетесь c <a href="#">политикой конфиденциальности</a></p>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        function openModal() {
+            document.getElementById('contactModal').style.display = 'flex';
+        }
+
+        function closeModal() {
+            document.getElementById('contactModal').style.display = 'none';
+        }
+
+        // Close modal when clicking outside
+        window.onclick = function(event) {
+            if (event.target.classList.contains('modal')) {
+                closeModal();
+            }
+        }
+    </script>
 </body>
 </html>
