--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <button onclick="openModal()">Связаться</button>
     </div>
     <footer>
-        2025 | ИП Галанов Никита Дмитриевич
+        2025 | ИП Галанов Максим Константинович
     </footer>
 
     <!-- Modal Form -->
