--- a/index.html
+++ b/index.html
@@ -162,21 +162,22 @@
         <button onclick="openModal()">Связаться</button>
     </div>
     <footer>
-        2025 | ИП Галанов Максим Константинович
+        2025 | ИП Гончаров Никита Дмитриевич
     </footer>
 
     <!-- Modal Form -->
     <div id="contactModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
+            <span class="close" onclick="closeModal()">×</span>
             <h2>Свяжитесь с нами</h2>
             <p>Задайте свой вопрос и укажите адрес электронной почты для связи</p>
-            <form>
-                <input type="text" placeholder="Как к вам обращаться" required>
-                <input type="email" placeholder="Email для обратной связи" required>
-                <textarea placeholder="Ваш вопрос и тема обращения" required></textarea>
+            <form action="https://formspree.io/f/mldbkkwa" method="POST">
+                <input type="text" name="name" placeholder="Как к вам обращаться" required>
+                <input type="email" name="email" placeholder="Email для обратной связи" required>
+                <textarea name="message" placeholder="Ваш вопрос и тема обращения" required></textarea>
+                <input type="hidden" name="_to" value="maksgalanov@yandex.ru">
                 <button type="submit">Отправить</button>
-                <p>Отправляя форму, вы даете согласие на обработку персональных данных и соглашаетесь c <a href="#">политикой конфиденциальности</a></p>
+                <p>Отправляя форму, вы даете согласие на обработку персональных данных и соглашаетесь c <a href="/privacy.html">политикой конфиденциальности</a></p>
             </form>
         </div>
     </div>
@@ -190,7 +191,6 @@
             document.getElementById('contactModal').style.display = 'none';
         }
 
-        // Close modal when clicking outside
         window.onclick = function(event) {
             if (event.target.classList.contains('modal')) {
                 closeModal();
