--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <button onclick="openModal()">Связаться</button>
     </div>
     <footer>
-        2025 | ИП Гончаров Никита Дмитриевич
+        2025 | ИП Галанов Максим Константинович
     </footer>
 
     <!-- Modal Form -->
